update visual + DC comics

--- a/src/app/components/menu-title/menu-title.component.html
+++ b/src/app/components/menu-title/menu-title.component.html
@@ -1,5 +1,6 @@
 <div class="container__menu-title">
   <hr/>
-  <h1>MARVEL BLOG</h1>
+  <img src="/assets/dc-logo.svg" alt="">
+  <h1>DC BLOG</h1>
   <hr/>
 </div>
