--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,3 +3,9 @@ header {
   display: flex;
   justify-content: center;
 }
+
+body{
+  background: url("/src/assets/wall-dc.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
