--- a/src/app/components/menu-title/menu-title.component.css
+++ b/src/app/components/menu-title/menu-title.component.css
@@ -1,14 +1,27 @@
 .container__menu-title{
   color: white;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 55px;
+}
+
+.container__menu-title img{
+  margin-left: 100px;
 }
 
 .container__menu-title > h1{
   margin-top: 15px;
   margin-bottom: 15px;
-  font-size: 135px;
+  font-size: 70px;
   font-family: 'segoe UI';
   display: flex;
   justify-content: center;
+  margin-left: 50px;
+  margin-right: 100px;
+}
+
+.container__menu-title h1:hover{
+  color: #0366c9;
 }
 
 .container__menu-title > hr{
