--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,9 +5,9 @@
 
     <app-big-card
       Id="1"
-      photoCover="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/7F51FA9F6CBD9F0C9B1394B1CC0A6A842D07091318674E234CD33CBF7C28CDC3/scale?width=1200&aspectRatio=1.78&format=jpeg"
-      cardTitle="NOVO HOMEM DE FERRO EM 3D"
-      cardDescription="Marvel Anuncia novo homem de ferro"
+      photoCover="https://cdn.ome.lt/Z54Xfir_5uc05qxdDGTJu8W7PJY=/987x0/smart/uploads/conteudo/fotos/cor_pL4BYNU.jpg"
+      cardTitle="Coringa foi campeão de reclamações no Reino Unido, revela associação"
+      cardDescription="Filme lançado com classificação indicativa para 15 anos chocou público por conta das cenas violentas"
       >
     </app-big-card>
 
@@ -15,23 +15,23 @@
   <div class="articles__others">
     <app-small-card
       Id="2"
-      cardTitle="Nova Série anunciada no Disney +"
-      photoCover="https://disneyplusbrasil.com.br/wp-content/uploads/2021/07/Series-Marvel-Disney-Plus-1024x576.jpg"
+      cardTitle="Pacificador | Bat-Mirim não estará na segunda temporada, segundo Gunn"
+      photoCover="https://cdn.ome.lt/gEgVob-bxP-pAq_o2lUhkr2qass=/987x0/smart/uploads/conteudo/fotos/poster_de_pacificador.jpg"
     >
     </app-small-card>
 
     <app-small-card
       Id="3"
-      cardTitle="Novo filme do pantera negra lançado em breve"
-      photoCover="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/35720ACD323F927C3A83D809D0F460BD3651740DA519BCC184B6F042057EA14D/scale?width=1200&aspectRatio=1.78&format=jpeg"
+      cardTitle="Matthew Vaughn sugere Taron Egerton como Lex Luthor em Superman: Legacy"
+      photoCover="https://cdn.ome.lt/iHccErwjC1N5lIumY474MjhBUKA=/987x0/smart/uploads/conteudo/fotos/Design_sem_nome_6_XfSimQQ.jpg"
     >
     </app-small-card
     >
 
     <app-small-card
       Id="4"
-      cardTitle="Novo filme dos X-men está em pós produção, afirma diretor"
-      photoCover="https://midias.correiobraziliense.com.br/_midias/jpg/2022/07/22/675x450/1_xmen-26096415.jpeg?20220722171339?20220722171339"
+      cardTitle="Warner rejeitou animação crossover entre Mortal Kombat e DC"
+      photoCover="https://cdn.ome.lt/h50gzxQIHxtO194AQfzHEmgdYLo=/987x0/smart/uploads/conteudo/fotos/Mortal_Kombat_vs_DC_Universe.jpg"
     >
     </app-small-card>
   </div>
